name:                asm6809
version:             1
synopsis:            Motorola 6809 assembler
-- description:         
homepage:            https://github.com/relrod/seon
license:             MIT
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2017 Ricky Elrod
category:            Development
build-type:          Simple
cabal-version:       >= 1.10

executable asm6809
  main-is:             Main.hs
  other-extensions:    DeriveFunctor
  build-depends:       base >= 4 && < 5
                     , bytestring >= 0.10 && < 0.11
  hs-source-dirs:      src
  default-language:    Haskell2010
